# rsomics-mismatch-profile

./: Cargo.toml  README.md
benches/: bench.rs  mismatch_profile.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: small.bam  small.bam.bai  small.mismatch_profile.xls
