[package]
name = "rsomics-mismatch-profile"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-mismatch-profile"
authors = ["Zane Leong <efd@live.com>"]
description = "Per-base mismatch-rate profile from BAM MD tags — Rust port of RSeQC mismatch_profile.py"

[[bin]]
name = "rsomics-mismatch-profile"
path = "src/main.rs"

[dependencies]
rsomics-common = "0.6"
rsomics-bamio = "0.1"
clap = { version = "4", features = ["derive"] }
noodles = { version = "0.110", features = ["sam", "bam"] }

[[bench]]
name = "mismatch_profile"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
